@@ -1,16 +1,18 @@
 package br.edu.unicesumar.api.controller;
 
-import br.edu.unicesumar.api.dto.InscricaoDTO;
 import br.edu.unicesumar.api.dto.InscricaoResumoDTO;
 import br.edu.unicesumar.api.entity.*;
 import br.edu.unicesumar.api.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 public class InscricaoController {
@@ -24,90 +26,66 @@ public class InscricaoController {
     @Autowired
     private AlunoRepository alunoRepository;
 
-    @PostMapping("/events/{idEvento}/registrations")
-    public ResponseEntity<?> inscreverAluno(@PathVariable Long idEvento, @RequestBody InscricaoDTO dto) {
-        Optional<Evento> eventoOpt = eventoRepository.findById(idEvento);
-        Optional<Aluno> alunoOpt = alunoRepository.findById(dto.getId());
+    @PostMapping("/events/{id}/registrations")
+    public void inscrever(@PathVariable Long id, @RequestBody Map<String, Long> body) {
+        Long idAluno = body.get("idAluno");
 
-        if (eventoOpt.isEmpty() || alunoOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
+        Evento evento = eventoRepository.findById(id).orElseThrow(() ->
+                new ResponseStatusException(HttpStatus.NOT_FOUND, "Evento não encontrado"));
+
+        Aluno aluno = alunoRepository.findById(idAluno).orElseThrow(() ->
+                new ResponseStatusException(HttpStatus.NOT_FOUND, "Aluno não encontrado"));
+
+        if (evento.getData().isBefore(LocalDate.now().atStartOfDay())) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Evento já ocorreu");
         }
 
-        Evento evento = eventoOpt.get();
-        Aluno aluno = alunoOpt.get();
-
-        if (evento.getData().isBefore(LocalDateTime.now())) {
-            return ResponseEntity.badRequest().body("Evento já ocorreu.");
-        }
-
-        long countAtivos = evento.getInscricoes().stream().filter(Inscricao::isAtivo).count();
-        if (countAtivos >= evento.getLimiteParticipantes()) {
-            return ResponseEntity.badRequest().body("Evento lotado.");
+        if (evento.getInscricoes().size() >= evento.getLimiteParticipantes()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Evento lotado");
         }
 
         boolean jaInscrito = evento.getInscricoes().stream()
-            .anyMatch(i -> i.getAluno().getId().equals(aluno.getId()) && i.isAtivo());
+                .anyMatch(i -> i.getAluno().getId().equals(aluno.getId()));
         if (jaInscrito) {
-            return ResponseEntity.badRequest().body("Aluno já inscrito no evento.");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Aluno já está inscrito neste evento");
         }
 
-        List<Inscricao> inscricoesAluno = aluno.getInscricoes();
-        if (inscricoesAluno != null) {
-            for (Inscricao i : inscricoesAluno) {
-                if (i.isAtivo() && i.getEvento().getData().isEqual(evento.getData())) {
-                    return ResponseEntity.badRequest().body("Conflito de horário com outro evento.");
-                }
+        List<Inscricao> inscricoesDoAluno = inscricaoRepository.findByAlunoId(aluno.getId());
+        for (Inscricao inscricao : inscricoesDoAluno) {
+            if (inscricao.getEvento().getData().equals(evento.getData())) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Conflito de datas com outro evento");
             }
         }
 
         Inscricao inscricao = new Inscricao();
-        inscricao.setAluno(aluno);
         inscricao.setEvento(evento);
-        inscricao.setDataInscricao(LocalDateTime.now());
-        inscricao.setAtivo(true);
-        Inscricao salva = inscricaoRepository.save(inscricao);
-
-        InscricaoResumoDTO resposta = new InscricaoResumoDTO();
-        resposta.setId(salva.getId());
-        resposta.setIdAluno(aluno.getId());
-        resposta.setNomeAluno(aluno.getNome());
-        resposta.setIdEvento(evento.getId());
-        resposta.setNomeEvento(evento.getNome());
-        resposta.setDataInscricao(salva.getDataInscricao().toString());
-        resposta.setAtivo(true);
-
-        return ResponseEntity.ok(resposta);
+        inscricao.setAluno(aluno);
+        inscricao.setDataHoraInscricao(LocalDateTime.now());
+        inscricao.setStatus(StatusInscricao.ATIVO);
+        inscricaoRepository.save(inscricao);
     }
 
-    @GetMapping("/students/{idAluno}/registrations")
-    public ResponseEntity<?> listarInscricoes(@PathVariable Long idAluno) {
-        Optional<Aluno> alunoOpt = alunoRepository.findById(idAluno);
-        if (alunoOpt.isEmpty()) return ResponseEntity.notFound().build();
-
-        List<InscricaoResumoDTO> resposta = alunoOpt.get().getInscricoes().stream().map(i -> {
+    @GetMapping("/students/{id}/registrations")
+    public List<InscricaoResumoDTO> listarInscricoes(@PathVariable Long id) {
+        List<Inscricao> inscricoes = inscricaoRepository.findByAlunoId(id);
+        return inscricoes.stream().map(inscricao -> {
             InscricaoResumoDTO dto = new InscricaoResumoDTO();
-            dto.setId(i.getId());
-            dto.setIdAluno(i.getAluno().getId());
-            dto.setNomeAluno(i.getAluno().getNome());
-            dto.setIdEvento(i.getEvento().getId());
-            dto.setNomeEvento(i.getEvento().getNome());
-            dto.setDataInscricao(i.getDataInscricao().toString());
-            dto.setAtivo(i.isAtivo());
+            dto.setId(inscricao.getId());
+            dto.setIdEvento(inscricao.getEvento().getId());
+            dto.setNomeEvento(inscricao.getEvento().getNome());
+            dto.setIdAluno(inscricao.getAluno().getId());
+            dto.setNomeAluno(inscricao.getAluno().getNome());
+            dto.setDataInscricao(inscricao.getDataHoraInscricao().toString());
+            dto.setAtivo(inscricao.getStatus() == StatusInscricao.ATIVO);
             return dto;
-        }).toList();
-
-        return ResponseEntity.ok(resposta);
-
+        }).collect(Collectors.toList());
     }
 
     @DeleteMapping("/registrations/{id}")
-    public ResponseEntity<?> cancelarInscricao(@PathVariable Long id) {
-        Optional<Inscricao> opt = inscricaoRepository.findById(id);
-        if (opt.isEmpty()) return ResponseEntity.notFound().build();
-
-        Inscricao inscricao = opt.get();
-        inscricao.setAtivo(false);
+    public void cancelar(@PathVariable Long id) {
+        Inscricao inscricao = inscricaoRepository.findById(id).orElseThrow(() ->
+                new ResponseStatusException(HttpStatus.NOT_FOUND, "Inscrição não encontrada"));
+        inscricao.setStatus(StatusInscricao.CANCELADO);
         inscricaoRepository.save(inscricao);
-        return ResponseEntity.ok("Inscrição cancelada.");
     }
 }
